--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       color: var(--text);
       line-height:1.6;
-
       background: linear-gradient(135deg, #3a7d7d 0%, #eaf6f6 100%);
       min-height: 100vh;
       transition: background-color .25s ease, color .25s ease;
@@ -92,27 +91,29 @@
   </style>
 </head>
 <body>
+  <div class="container">
+    <header class="reveal">
+      <h1>Ryan R</h1>
+      <p>Game Developer & Full Stack Programmer</p>
+      <p>I've been honing my programming skills for 7+ years in and out of college. I'm a fast learner and very capable person</p>
+      <p>All my Unity skills I taught myself and can teach myself any languages or skills</p>
+
+      <div class="badges">
+        <span class="badge">Unity / C#</span>
+        <span class="badge">Gameplay</span>
+        <span class="badge">VR / 2D / 3D</span>
+        <span class="badge">Tools &amp; UI</span>
+      </div>
+
+      <div class="top-actions">
+        <a class="btn" href="mailto:ryanrookis@gmail.com">Contact Me</a>
+        <a class="btn secondary" href="https://github.com/uncrustable125" target="_blank" rel="noreferrer">GitHub</a>
+      </div>
+    </header>
+  </div>
+
   <div class="content-box">
     <div class="container">
-      <header class="reveal">
-        <h1>Ryan R</h1>
-        <p>Game Developer & Full Stack Programmer</p>
-        <p>I've been honing my programming skills for 7+ years in and out of college. I'm a fast learner and very capable person</p>
-        <p>All my Unity skills I taught myself and can teach myself any languages or skills</p>
-
-        <div class="badges">
-          <span class="badge">Unity / C#</span>
-          <span class="badge">Gameplay</span>
-          <span class="badge">VR / 2D / 3D</span>
-          <span class="badge">Tools &amp; UI</span>
-        </div>
-
-        <div class="top-actions">
-          <a class="btn" href="mailto:ryanrookis@gmail.com">Contact Me</a>
-          <a class="btn secondary" href="https://github.com/uncrustable125" target="_blank" rel="noreferrer">GitHub</a>
-        </div>
-      </header>
-
       <h2>Projects</h2>
       <div class="grid">
         <article class="card reveal">
