--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ryan R — Game Dev & Full Stack Programmer</title>
+  <title>Ryan Rookis — Game Dev & Full Stack Programmer</title>
   <meta name="description" content="Portfolio of Ryan R — Unity developer and programmer. Projects include a card-based strategy game, Name Recall Challenge (EEG), a farm sim, and an unwinnable tic-tac-toe." />
   <meta name="robots" content="index, follow" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
@@ -93,7 +93,7 @@
 <body>
   <div class="container">
     <header class="reveal">
-      <h1>Ryan R</h1>
+      <h1>Ryan Rookis</h1>
       <p>Game Developer & Full Stack Programmer</p>
       <p>I've been honing my programming skills for 7+ years in and out of college. I'm a fast learner and very capable person</p>
       <p>All my Unity skills I taught myself and can teach myself any languages or skills</p>
@@ -185,7 +185,7 @@
       
     </div>
   </div>
-<footer>© <span id="y"></span> Ryan R • Vanilla HTML/CSS</footer>
+<footer>© <span id="y"></span> Ryan Rookis • Vanilla HTML/CSS</footer>
   <script>
     document.getElementById('y').textContent = new Date().getFullYear();
   </script>
