--- a/index.html
+++ b/index.html
@@ -94,19 +94,19 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  
-  min-height: 100vh; /* takes up full screen height */
+  min-height: 100vh;
   width: 100%;
-  
   text-align: center;
   color: white;
 
+  /* Apply the Unsplash image you shared */
   background: linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
-              url('https://images.unsplash.com/photo-1526374965328-7f61d4dc18c5?auto=format&fit=crop&w=1600&q=80');
+              url('https://images.unsplash.com/photos/ieic5Tq8YMk?auto=format&fit=crop&w=1600&q=80');
   background-size: cover;
   background-position: center;
-  background-attachment: fixed; /* optional parallax-y effect */
+  background-attachment: fixed;
 }
+
   </style>
 </head>
 <body>
@@ -174,7 +174,7 @@
       </div>
 
       <h2>About Me</h2>
-      <p>Outside of development, I’m a spiritual and curious person — I want to grow with others, learn from different cultures, and meet people from all walks of life.</p>
+      <p>Outside of development, I’m a spiritual and curious person — I want to grow with others, learn from different cultures, and meet people from all walks of life. I'd love to work in a position that allows me to hone my skills in coding and hardware.</p>
       <h3 style="margin:8px 0 6px">Some of the games I love</h3>
       <ul>
         <li>Halo</li>
