--- a/index.html
+++ b/index.html
@@ -94,17 +94,19 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
   min-height: 100vh;
   width: 100%;
+
   text-align: center;
   color: white;
 
-  /* Apply the Unsplash image you shared */
+  /* Direct Unsplash image link */
   background: linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
-              url('https://images.unsplash.com/photos/ieic5Tq8YMk?auto=format&fit=crop&w=1600&q=80');
+              url('https://images.unsplash.com/photo-1537432376769-00f5f01fd8d1?ixlib=rb-4.0.3&auto=format&fit=crop&w=1600&q=80');
   background-size: cover;
   background-position: center;
-  background-attachment: fixed;
+  background-attachment: fixed; /* optional: parallax-y effect */
 }
 
   </style>
