--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ryan Rookis — Game Dev & Full Stack Programmer</title>
+  <title>Ryan R — Game Dev & Full Stack Programmer</title>
   <meta name="description" content="Portfolio of Ryan R — Unity developer and programmer. Projects include a card-based strategy game, Name Recall Challenge (EEG), a farm sim, and an unwinnable tic-tac-toe." />
   <meta name="robots" content="index, follow" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
-
   <style>
     :root{
       --accent: #2563eb;
@@ -18,27 +17,35 @@
       --shadow: 0 4px 12px rgba(0,0,0,.10);
       --shadow-lg: 0 8px 20px rgba(0,0,0,.12);
     }
-
     *{box-sizing:border-box}
-    body {
+
+    body{
       margin:0;
       font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
       color: var(--text);
       line-height:1.6;
       background: linear-gradient(135deg, #3a7d7d 0%, #eaf6f6 100%);
       min-height: 100vh;
-      transition: background-color .25s ease, color .25s ease;
     }
 
-    /* NEW: content box wrapper */
-    .content-box {
-      background: #ffffffee; /* white with slight transparency */
-      border-radius: 16px;
-      box-shadow: 0 10px 30px rgba(0,0,0,.12);
-      margin: 40px auto;
-      max-width: 1100px;
-      padding: 20px 0;
+    /* FULL-SCREEN HERO with image + overlay */
+    .hero{
+      display:flex; flex-direction:column; align-items:center; justify-content:center;
+      min-height:100vh; width:100%;
+      text-align:center; color:#fff; padding: 0 16px;
+
+      /* ✅ Use the direct/redirecting Unsplash endpoint by photo ID */
+      background:
+        linear-gradient(rgba(0,0,0,.55), rgba(0,0,0,.55)),
+        url('https://source.unsplash.com/ieic5Tq8YMk/1920x1080');
+      background-size:cover;
+      background-position:center;
+      background-repeat:no-repeat;
+      /* optional: comment out if mobile scroll jumps */
+      /* background-attachment: fixed; */
     }
+    .hero h1{ font-size:clamp(2rem, 4vw, 3rem); margin:0 0 14px; letter-spacing:-.02em }
+    .hero p{ max-width:720px; margin:0 auto 12px; color:rgba(255,255,255,.88) }
 
     .container{max-width:1000px; margin:0 auto; padding: clamp(20px, 3vw, 28px)}
     a{color:inherit; text-decoration:none}
@@ -50,87 +57,66 @@
       transition: transform .15s ease, filter .2s ease;
     }
     .btn:hover{ transform: translateY(-1px); filter: saturate(1.05) }
-    .btn.secondary{ background: transparent; color: var(--text); border:1px solid var(--border) }
-
-    header{ text-align:center; padding: clamp(48px, 7vw, 80px) 16px 36px }
-    header h1{ font-size: clamp(1.9rem, 3.6vw, 2.8rem); margin:0 0 10px; letter-spacing:-.02em }
-    header p{ max-width:720px; margin:0 auto 12px; color: var(--muted) }
+    .btn.secondary{ background: transparent; color: #fff; border:1px solid rgba(255,255,255,.35) }
 
     .top-actions{ display:flex; gap:10px; justify-content:center; align-items:center; flex-wrap:wrap; margin-top:14px }
 
     .badges{ display:flex; flex-wrap:wrap; justify-content:center; gap:8px; margin:16px 0 }
     .badge{
-      background:#fff; border:1px solid var(--border); color: var(--muted);
-      padding:6px 10px; border-radius:999px; font-size:.85rem
+      background:rgba(255,255,255,.12); border:1px solid rgba(255,255,255,.25); color:#fff;
+      padding:6px 10px; border-radius:999px; font-size:.85rem; backdrop-filter: blur(4px)
     }
 
-    h2{ font-size:1.4rem; margin:26px 0 12px }
+    /* CONTENT BOX for the rest */
+    .content-box{
+      background:#ffffffee;
+      border-radius:16px;
+      box-shadow:0 10px 30px rgba(0,0,0,.12);
+      margin:40px auto;
+      max-width:1100px;
+      padding:20px 0;
+    }
 
+    h2{ font-size:1.4rem; margin:26px 0 12px; color:var(--text) }
     .grid{ display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:18px }
-    .card{
-      background:#fff; border:1px solid var(--border); border-radius: var(--radius);
-      box-shadow: var(--shadow); padding:18px; display:flex; flex-direction:column
-    }
+    .card{ background:#fff; border:1px solid var(--border); border-radius: var(--radius); box-shadow: var(--shadow); padding:18px; display:flex; flex-direction:column }
     .card h3{ margin:0 0 6px }
-    .card p{ color: var(--muted); margin:0 0 8px; flex-grow:1 }
+    .card p{ color:var(--muted); margin:0 0 8px; flex-grow:1 }
     .card:hover{ transform: translateY(-2px); box-shadow: var(--shadow-lg) }
-
     .embed{ position:relative; padding-top:56.25%; border-radius:12px; overflow:hidden; margin:8px 0 10px; background:#000 }
     .embed iframe{ position:absolute; inset:0; width:100%; height:100%; border:0 }
-
     footer{ text-align:center; font-size:.9rem; color: var(--muted); margin:40px 0 10px }
 
     /* Intro transition */
     @media (prefers-reduced-motion: no-preference){
       .card{ transition: transform .25s ease, box-shadow .25s ease }
       .reveal{ animation: pop .5s ease both }
-      @keyframes pop{
-        from{ opacity:0; transform: translateY(8px) scale(.98) }
-      }
+      @keyframes pop{ from{ opacity:0; transform: translateY(8px) scale(.98) } }
     }
-	
-.hero {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-  min-height: 100vh;
-  width: 100%;
-
-  text-align: center;
-  color: white;
-
-  /* Direct Unsplash image link */
-  background: linear-gradient(rgba(0,0,0,0.55), rgba(0,0,0,0.55)),
-              url('https://images.unsplash.com/photo-1537432376769-00f5f01fd8d1?ixlib=rb-4.0.3&auto=format&fit=crop&w=1600&q=80');
-  background-size: cover;
-  background-position: center;
-  background-attachment: fixed; /* optional: parallax-y effect */
-}
-
   </style>
 </head>
 <body>
-<header class="hero">
-  <h1>Ryan R</h1>
-  <p>Game Developer & Full Stack Programmer</p>
-  <p>I've been honing my programming skills for 7+ years in and out of college. I'm a fast learner and very capable person</p>
-  <p>All my Unity skills I taught myself and can teach myself any languages or skills</p>
+  <!-- HERO on its own (full screen) -->
+  <header class="hero reveal">
+    <h1>Ryan R</h1>
+    <p>Game Developer & Full Stack Programmer</p>
+    <p>I've been honing my programming skills for 7+ years in and out of college. I'm a fast learner and very capable person</p>
+    <p>All my Unity skills I taught myself and can teach myself any languages or skills</p>
 
-  <div class="badges">
-    <span class="badge">Unity / C#</span>
-    <span class="badge">Gameplay</span>
-    <span class="badge">VR / 2D / 3D</span>
-    <span class="badge">Tools &amp; UI</span>
-  </div>
+    <div class="badges">
+      <span class="badge">Unity / C#</span>
+      <span class="badge">Gameplay</span>
+      <span class="badge">VR / 2D / 3D</span>
+      <span class="badge">Tools &amp; UI</span>
+    </div>
 
-  <div class="top-actions">
-    <a class="btn" href="mailto:ryanrookis@gmail.com">Contact Me</a>
-    <a class="btn secondary" href="https://github.com/uncrustable125" target="_blank" rel="noreferrer">GitHub</a>
-  </div>
-</header>
+    <div class="top-actions">
+      <a class="btn" href="mailto:ryanrookis@gmail.com">Contact Me</a>
+      <a class="btn secondary" href="https://github.com/uncrustable125" target="_blank" rel="noreferrer">GitHub</a>
+    </div>
+  </header>
 
+  <!-- Everything else in the content box -->
   <div class="content-box">
     <div class="container">
       <h2>Projects</h2>
@@ -176,7 +162,7 @@
       </div>
 
       <h2>About Me</h2>
-      <p>Outside of development, I’m a spiritual and curious person — I want to grow with others, learn from different cultures, and meet people from all walks of life. I'd love to work in a position that allows me to hone my skills in coding and hardware.</p>
+      <p>Outside of development, I’m a spiritual and curious person — I want to grow with others, learn from different cultures, and meet people from all walks of life.</p>
       <h3 style="margin:8px 0 6px">Some of the games I love</h3>
       <ul>
         <li>Halo</li>
@@ -201,10 +187,10 @@
       <p>Email: <a class="btn secondary" href="mailto:ryanrookis@gmail.com">ryanrookis@gmail.com</a></p>
       <p>GitHub: <a class="btn secondary" href="https://github.com/Uncrustable125" target="_blank" rel="noreferrer">Uncrustable125</a></p>
 
-      
+      <footer>© <span id="y"></span> Ryan R • Vanilla HTML/CSS</footer>
     </div>
   </div>
-<footer>© <span id="y"></span> Ryan Rookis • Vanilla HTML/CSS</footer>
+
   <script>
     document.getElementById('y').textContent = new Date().getFullYear();
   </script>
