--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
       /* ✅ Use the direct/redirecting Unsplash endpoint by photo ID */
       background:
+        linear-gradient(rgba(0,0,0,.55), rgba(0,0,0,.55)),
         url('https://images.unsplash.com/photo-1612178991665-6f9f9c94ad4f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80');
       background-size:cover;
       background-position:center;
