--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@
       text-align:center; color:#fff; padding: 0 16px;
 
       /* ✅ Use the direct/redirecting Unsplash endpoint by photo ID */
-      background:
-        linear-gradient(rgba(0,0,0,.55), rgba(0,0,0,.55)),
-        url('https://images.unsplash.com/photo-1612178991665-6f9f9c94ad4f?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80');
-      background-size:cover;
-      background-position:center;
-      background-repeat:no-repeat;
+        background:
+    linear-gradient(rgba(0,0,0,.55), rgba(0,0,0,.55)),
+    url('https://source.unsplash.com/ieic5Tq8YMk/1920x1080');
+  background-size: cover;
+  background-position: center;
       /* optional: comment out if mobile scroll jumps */
       /* background-attachment: fixed; */
     }
