--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       /* ✅ Use the direct/redirecting Unsplash endpoint by photo ID */
         background:
     linear-gradient(rgba(0,0,0,.55), rgba(0,0,0,.55)),
-    url('https://source.unsplash.com/ieic5Tq8YMk/1920x1080');
+    url('https://unsplash.com/photos/a-computer-screen-with-a-bunch-of-code-on-it-ieic5Tq8YMk');
   background-size: cover;
   background-position: center;
       /* optional: comment out if mobile scroll jumps */
