--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Ryan R — Game Dev & Full Stack Programmer</title>
-  <meta name="description" content="Portfolio of Ryan R — Unity developer and programmer. Projects include a card-based strategy game, Name Recall Challenge (EEG), a farm sim, and an unwinnable tic-tac-toe." />
+  <title>Ryan Rookis — Game Dev & Full Stack Programmer</title>
+  <meta name="description" content="Portfolio of Ryan Rookis — Unity developer and programmer. Projects include a card-based strategy game, Name Recall Challenge (EEG), a farm sim, and an unwinnable tic-tac-toe." />
   <meta name="robots" content="index, follow" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
@@ -97,17 +97,11 @@
 <body>
   <!-- HERO on its own (full screen) -->
   <header class="hero reveal">
-    <h1>Ryan R</h1>
+    <h1>Ryan Rookis</h1>
     <p>Game Developer & Full Stack Programmer</p>
     <p>I've been honing my programming skills for 7+ years in and out of college. I'm a fast learner and very capable person</p>
     <p>All my Unity skills I taught myself and can teach myself any languages or skills</p>
 
-    <div class="badges">
-      <span class="badge">Unity / C#</span>
-      <span class="badge">Gameplay</span>
-      <span class="badge">VR / 2D / 3D</span>
-      <span class="badge">Tools &amp; UI</span>
-    </div>
 
     <div class="top-actions">
       <a class="btn" href="mailto:ryanrookis@gmail.com">Contact Me</a>
@@ -186,7 +180,7 @@
       <p>Email: <a class="btn secondary" href="mailto:ryanrookis@gmail.com">ryanrookis@gmail.com</a></p>
       <p>GitHub: <a class="btn secondary" href="https://github.com/Uncrustable125" target="_blank" rel="noreferrer">Uncrustable125</a></p>
 
-      <footer>© <span id="y"></span> Ryan R • Vanilla HTML/CSS</footer>
+      <footer>© <span id="y"></span> Ryan Rookis • Vanilla HTML/CSS</footer>
     </div>
   </div>
 
