--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       text-align:center; color:#fff; padding: 0 16px;
 
       /* ✅ Use the direct/redirecting Unsplash endpoint by photo ID */
-        background:
-    linear-gradient(rgba(0,0,0,.55), rgba(0,0,0,.55)),
-    url('https://unsplash.com/photos/a-computer-screen-with-a-bunch-of-code-on-it-ieic5Tq8YMk');
-  background-size: cover;
-  background-position: center;
+    background:
+      linear-gradient(rgba(0,0,0,.55), rgba(0,0,0,.55)),
+      url('https://source.unsplash.com/1600x900/?code,programming');
+    background-size: cover;
+    background-position: center;
       /* optional: comment out if mobile scroll jumps */
       /* background-attachment: fixed; */
     }
@@ -115,8 +115,8 @@
       <h2>Projects</h2>
       <div class="grid">
         <article class="card reveal">
-		          <div class="embed">
-            <iframe src="https://www.youtube.com/embed/lk1gdjNjQ88?mute=0&loop=1&playlist=lk1gdjNjQ88" allow="encrypted-media" allowfullscreen></iframe>
+		  <div class="embed">
+          <iframe src="https://www.youtube.com/embed/lk1gdjNjQ88?mute=0&loop=1&playlist=lk1gdjNjQ88" allow="encrypted-media" allowfullscreen></iframe>
           </div>
           <h3>Card-Based Strategy Game</h3>
           <p>A Slay-the-Spire-style deckbuilder focused on clearing waves of enemies and building a deck. Features some custom art.</p>
@@ -125,8 +125,8 @@
         </article>
 
         <article class="card reveal">
-		          <div class="embed">
-            <iframe src="https://www.youtube.com/embed/_eDWl9PTm7k?mute=0&loop=1&playlist=_eDWl9PTm7k" allow="encrypted-media" allowfullscreen></iframe>
+	      <div class="embed">
+          <iframe src="https://www.youtube.com/embed/_eDWl9PTm7k?mute=0&loop=1&playlist=_eDWl9PTm7k" allow="encrypted-media" allowfullscreen></iframe>
           </div>
           <h3>Name Recall Challenge</h3>
           <p>A memory-based game where users match faces and names. Played with an EEG monitor. Professional project for the NTL group’s NeuroCoach.</p>
@@ -138,8 +138,8 @@
         </article>
 
         <article class="card reveal">
-		          <div class="embed">
-            <iframe src="https://www.youtube.com/embed/UWodgMyIYIs?mute=0&loop=1&playlist=UWodgMyIYIs" allow="encrypted-media" allowfullscreen></iframe>
+		  <div class="embed">
+          <iframe src="https://www.youtube.com/embed/UWodgMyIYIs?mute=0&loop=1&playlist=UWodgMyIYIs" allow="encrypted-media" allowfullscreen></iframe>
           </div>
           <h3>Farm Game</h3>
           <p>A farm game similar to Stardew Valley or Harvest Moon. Shows off a tile-based farm/crop system and a dialog system. First real Unity project; some art original.</p>
@@ -147,8 +147,8 @@
         </article>
 
         <article class="card reveal">
-		          <div class="embed">
-            <iframe src="https://www.youtube.com/embed/2hGbSUb_NqI?mute=0&loop=1&playlist=2hGbSUb_NqI" allow="encrypted-media" allowfullscreen></iframe>
+		  <div class="embed">
+          <iframe src="https://www.youtube.com/embed/2hGbSUb_NqI?mute=0&loop=1&playlist=2hGbSUb_NqI" allow="encrypted-media" allowfullscreen></iframe>
           </div>
           <h3>Unwinnable Tic-Tac-Toe</h3>
           <p>Quick project I made for fun. You can’t win.</p>
