--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@
       text-align:center; color:#fff; padding: 0 16px;
 
       /* ✅ Use the direct/redirecting Unsplash endpoint by photo ID */
-    background:
-      linear-gradient(rgba(0,0,0,.55), rgba(0,0,0,.55)),
-      url('https://source.unsplash.com/1600x900/?code,programming');
-    background-size: cover;
-    background-position: center;
-      /* optional: comment out if mobile scroll jumps */
+  background:
+    linear-gradient(rgba(0,0,0,.55), rgba(0,0,0,.55)),
+    url('https://images.pexels.com/photos/6424585/pexels-photo-6424585.jpeg?auto=compress&cs=tinysrgb&w=2400&h=1400&dpr=1');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
       /* background-attachment: fixed; */
     }
     .hero h1{ font-size:clamp(2rem, 4vw, 3rem); margin:0 0 14px; letter-spacing:-.02em }
