--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
     }
     *{box-sizing:border-box}
 
-    body{
-      margin:0;
-      font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-      color: var(--text);
-      line-height:1.6;
-      background: linear-gradient(135deg, #3a7d7d 0%, #eaf6f6 100%);
-      min-height: 100vh;
-    }
+body {
+  margin: 0;
+  font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+  color: var(--text);
+  line-height: 1.6;
+  min-height: 100vh;
+
+  /* skyblue → silver gradient */
+  background: linear-gradient(135deg, skyblue 0%, silver 100%);
+}
 
     /* FULL-SCREEN HERO with image + overlay */
     .hero{
