--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ body {
   line-height: 1.6;
   min-height: 100vh;
 
-  /* skyblue → silver gradient */
-  background: linear-gradient(135deg, skyblue 0%, silver 100%);
+  background: #eaf6fb; /* light sky blue */
 }
+
 
     /* FULL-SCREEN HERO with image + overlay */
     .hero{
@@ -69,14 +69,15 @@ body {
     }
 
     /* CONTENT BOX for the rest */
-    .content-box{
-      background:#ffffffee;
-      border-radius:16px;
-      box-shadow:0 10px 30px rgba(0,0,0,.12);
-      margin:40px auto;
-      max-width:1100px;
-      padding:20px 0;
-    }
+.content-box {
+  background: rgba(255, 255, 255, 0.85); /* translucent white */
+  border-radius: 16px;
+  box-shadow: 0 10px 30px rgba(0,0,0,.12);
+  margin: 40px auto;
+  max-width: 1100px;
+  padding: 20px 0;
+  backdrop-filter: blur(6px); /* frosted effect */
+}
 
     h2{ font-size:1.4rem; margin:26px 0 12px; color:var(--text) }
     .grid{ display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:18px }
