--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@ body {
   line-height: 1.6;
   min-height: 100vh;
 
-  background: #eaf6fb; /* light sky blue */
+  background: #f5fbff; /* very light sky blue */
 }
+
 
 
     /* FULL-SCREEN HERO with image + overlay */
@@ -70,14 +71,15 @@ body {
 
     /* CONTENT BOX for the rest */
 .content-box {
-  background: rgba(255, 255, 255, 0.85); /* translucent white */
+  background: rgba(255, 255, 255, 0.7); /* more see-through */
   border-radius: 16px;
-  box-shadow: 0 10px 30px rgba(0,0,0,.12);
+  box-shadow: 0 10px 30px rgba(0,0,0,.1);
   margin: 40px auto;
   max-width: 1100px;
   padding: 20px 0;
-  backdrop-filter: blur(6px); /* frosted effect */
+  backdrop-filter: blur(8px); /* smoother frosted look */
 }
+
 
     h2{ font-size:1.4rem; margin:26px 0 12px; color:var(--text) }
     .grid{ display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:18px }
