--- a/index.html
+++ b/index.html
@@ -31,20 +31,29 @@ body {
 }
 
     /* FULL-SCREEN HERO with image + overlay */
-    .hero{
-      display:flex; flex-direction:column; align-items:center; justify-content:center;
-      min-height:100vh; width:100%;
-      text-align:center; color:#fff; padding: 0 16px;
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 
-      /* ✅ Use the direct/redirecting Unsplash endpoint by photo ID */
+  min-height: 100vh;
+  max-width: 1100px;       /* limit width */
+  margin: 0 auto;          /* center horizontally */
+  border-radius: 18px;     /* rounded edges */
+  overflow: hidden;        /* so background doesn’t spill */
+  text-align: center;
+  color: #fff;
+  padding: 0 16px;
+
   background:
     linear-gradient(rgba(0,0,0,.55), rgba(0,0,0,.55)),
     url('https://images.pexels.com/photos/6424585/pexels-photo-6424585.jpeg?auto=compress&cs=tinysrgb&w=2400&h=1400&dpr=1');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-      /* background-attachment: fixed; */
-    }
+}
+
     .hero h1{ font-size:clamp(2rem, 4vw, 3rem); margin:0 0 14px; letter-spacing:-.02em }
     .hero p{ max-width:720px; margin:0 auto 12px; color:rgba(255,255,255,.88) }
 
