--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
-  min-height: 100vh;
+ padding-top: 10px;
+  min-height: 90vh;
   max-width: 1600px;       /* limit width */
   margin: 0 auto;          /* center horizontally */
   border-radius: 18px;     /* rounded edges */
@@ -84,7 +84,7 @@ body {
       box-shadow:0 10px 30px rgba(0,0,0,.12);
       margin:40px auto;
       max-width:1100px;
-      padding:20px 0;
+      /*padding:20px 0;*/
     }
 
     h2{ font-size:1.4rem; margin:26px 0 12px; color:var(--text) }
