--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     *{box-sizing:border-box}
 
 body {
+padding-top: 32px;
   margin: 0;
   font-family: Inter, system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
   color: var(--text);
