--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ padding-top: 32px;
   justify-content: center;
  padding-top: 100px;
   min-height: 90vh;
-  max-width: 1600px;       /* limit width */
+        /* limit width */
   margin: 0 auto;          /* center horizontally */
   border-radius: 18px;     /* rounded edges */
   overflow: hidden;        /* so background doesn’t spill */
