--- a/index.html
+++ b/index.html
@@ -79,13 +79,14 @@ padding-top: 32px;
     }
 
     /* CONTENT BOX for the rest */
-    .content-box{
-      background:#ffffffee;
-      border-radius:16px;
-      box-shadow:0 10px 30px rgba(0,0,0,.12);
-      margin:40px auto;
-      max-width:1100px;
-    }
+.content-box {
+  background: rgba(173, 216, 230, 0.75); /* light teal with 75% opacity */
+  border-radius: 16px;
+  box-shadow: 0 10px 30px rgba(0,0,0,.12);
+  margin: 40px auto;
+  max-width: 1100px;
+  backdrop-filter: blur(6px); /* adds a frosted-glass effect */
+}
 
     h2{ font-size:1.4rem; margin:26px 0 12px; color:var(--text) }
     .grid{ display:grid; grid-template-columns:repeat(auto-fit,minmax(280px,1fr)); gap:18px }
